# smb-mock

./: .hadolint.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  wizard.html
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  dockerhub-sync.yml  integration.yml  release.yml  scorecard.yml  trivy.yml
cli/: formatters.py  wizard.py
docker/kdc/: Dockerfile  config.py  entrypoint.py
docker/samba/: Dockerfile  config.py  entrypoint.py
tests/integration/: conftest.py  test_anonymous.py  test_kerberos.py  test_ntlm.py  test_smb_versions.py  test_trusts.py
tests/unit/: test_cli_formatters.py  test_kdc_config.py  test_samba_config.py
