[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smb-mock"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
cli = ["click>=8.0"]

[project.scripts]
smb-mock-wizard = "cli.wizard:wizard"

[tool.pytest.ini_options]
pythonpath = ["docker", "."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["docker"]
