[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smb-mock"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
cli = ["click>=8.3.3"]

[project.scripts]
smb-mock-wizard = "cli.wizard:wizard"

[tool.pytest.ini_options]
pythonpath = ["docker", "."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["docker"]

[tool.coverage.run]
# entrypoint.py files exec system daemons (krb5kdc, smbd) — not unit-testable
# cli/wizard.py is a Click CLI entry point — not unit-testable
omit = [
    "docker/kdc/entrypoint.py",
    "docker/samba/entrypoint.py",
    "cli/wizard.py",
    "tests/*",
]

[tool.coverage.report]
# config.py files (the testable surface) run at 95-98%; 90 is a safe gate
fail_under = 90
